src/test/ui/lang-items/lang-item-missing-generator.stderr
error[E0635]: unknown feature `tuple_trait`
  --> $DIR/lang-item-missing-generator.rs:2:51
   |
LL | #![feature(no_core, lang_items, unboxed_closures, tuple_trait)]
   |                                                   ^^^^^^^^^^^

error: requires `generator` lang_item
  --> $DIR/lang-item-missing-generator.rs:17:17
   |
LL | pub fn abc() -> impl FnOnce(f32) {
   |                 ^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0635`.
